@@ -6,8 +6,8 @@ echo Starting GameServer.
 echo.
 
 set JAVA_OPTS=%JAVA_OPTS% -Xmn512m
-set JAVA_OPTS=%JAVA_OPTS% -Xms2096m
-set JAVA_OPTS=%JAVA_OPTS% -Xmx2096m
+set JAVA_OPTS=%JAVA_OPTS% -Xms1024m
+set JAVA_OPTS=%JAVA_OPTS% -Xmx1024m
 
 set JAVA_OPTS=%JAVA_OPTS% -Xnoclassgc
 set JAVA_OPTS=%JAVA_OPTS% -XX:+AggressiveOpts
@@ -20,7 +20,7 @@ set JAVA_OPTS=%JAVA_OPTS% -XX:+UseConcMarkSweepGC
 set JAVA_OPTS=%JAVA_OPTS% -XX:UseSSE=3
 set JAVA_OPTS=%JAVA_OPTS% -XX:+UseFastAccessorMethods
 
-java -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005 -server -Dfile.encoding=UTF-8 -Xmx1024m -XX:+UseConcMarkSweepGC -XX:+UseTLAB -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -Xloggc:./gc.log -cp config;./../libs/* l2f.gameserver.GameServer
+java -server %JAVA_OPTS% -Dfile.encoding=UTF-8 -cp config;./../libs/* l2f.gameserver.GameServer
 
 if ERRORLEVEL 2 goto restart
 if ERRORLEVEL 1 goto error
